<?xml version="1.0"?>
<package format="3">
  <name>rcm_modulation_demo</name>
  <version>0.1.0</version>
  <description>Clean ROS 2 demo of obstacle-aware velocity modulation for RCM visual servoing.</description>
  <maintainer email="jonnyma@seas.upenn.edu">Jonathan Ma</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
